<resources>
    <string name="app_name" translatable="false">Challenge Chapter 4</string>
    <string name="prompt_username">Masukkan Username</string>
    <string name="prompt_email">Masukkan Email</string>
    <string name="prompt_password">Masukkan Password</string>
    <string name="prompt_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="prompt_friend_name">Masukkan Nama Teman</string>
    <string name="prompt_friend_status">Masukkan Status Pertemanan</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="form">Formulir</string>
</resources>